--- a/address_check/appsscript.json
+++ b/address_check/appsscript.json
@@ -1,6 +1,11 @@
 {
   "timeZone": "Asia/Hong_Kong",
   "dependencies": {
+    "libraries": [{
+      "userSymbol": "findcity",
+      "libraryId": "1U8aDyhhw2td6-RPeURfSbB2wg-EDgEXHrNtuDChcC3iL63zWKcC02OZL",
+      "version": "5"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
